# avni-ai

./: .env  .env.example  .env.production  .env.staging  .gitignore  .pre-commit-config.yaml  App Configurator [Staging] v3.yml  AppConfigV3_final.yml  Avni AI Assistant [MODIFIED].yml  Avni Himesh.yml  AvniFormElementValidatorPrompt.md  COMPLIANCE_REPORT.md  DIFY_FLOW_RECOMMENDATIONS.md  DSPY_USAGE.md  Field workflow specification.xlsx  HANDOVER.md  IMPLEMENTATION_SUMMARY.md  Makefile  NewAppConfigurator.yml  README.md  README_TESTING.md  README_TRAINING.md  ShortApp Config [Staging] Assistant.yml  Siddharth V3 .yml  ainotes.md  analytics.py  analytics_report.csv  analyze_real_data.py  app-configurator-poc-requirements.md  avni-ai-overhaul-plan.md  avni-ai.codemap  avni-comprehensive-spec-format.yaml  buncle_config_node_exec1.json  bundle-agent-prompt.txt  clean_config_manager.py  client.py  cloud.dify.ai_cookies.txt  compare_versions.py  complete_analytics_20260324_200720.csv  config.py  (+40 more)
.circleci/: config.yml
ai-training-plan/: Avni_AI_2026_Execution_Plan.md  appendices.md  technical_milestones.md  training_curriculum.md
design/: code-structure.txt  overall-design.txt  phase-wise-implementation.md
dify/: .env.example  AVNI AI Assistant (Sub-Agents).yml  About the AI Assistant.md  App Config [Staging] Assistant.yml  App Configurator [Staging] v2.yml  App Configurator [Staging] v3.yml  Avni [Prerelease] Assistant.yml  Avni [Prerelease] Dev.yml  Avni [Prod] Assistant [Do Not Touch].yml  Avni [Prod] Do Not Touch.yml  Avni [Staging] Assistant [Do Not Touch].yml  (+32 more)
(+504 files in other folders)
