[project]
name = "avni-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "python-dotenv>=1.1.1",
    "openai>=1.99.9",
    "fastmcp>=2.11.3",
    "fastapi>=0.118.0",
    "pytest-asyncio>=1.1.0",
]

[project.scripts]
avni-mcp-server = "src.main:main"

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[dependency-groups]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-ordering>=0.6",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

dev = [
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "types-requests>=2.31.0",
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "asyncio>=4.0.0",
    "anyio>=4.9.0",
]
